deployments/angularui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angularui-service
spec:
  selector:
    app: angularui
  ports:
  - port: 80
    targetPort: 80
