deployments/angularui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angularui-ingress
  labels:
    name: angularui-ingress
spec:
  rules:
  - host: www.camping-galaxy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angularui-service
            port: 
              number: 80
